# HSBRiskEvaluator

./: .gitignore  Dockerfile  README.md  dev.sh  pyproject.toml
scripts/: analyze_package_repo.py  calculate_score.py  convert_debian_packages.py  delete_symlinks.py  evaluate.py  fetch_repo_infos.py  fetch_upstream_infos.py  generate_package_metadata.py  generate_packages_from_file.py  get_cloud_packages.py  get_debian_package.py  get_debian_packages.py  get_priority_packages.py  merge_repo_info.py
src/example/: dependencies_collect.py  evaluate_xz.py
src/hsbriskevaluator/: __init__.py  git.py  llm.py
src/hsbriskevaluator/collector/: __init__.py  apt_collector.py  github_collector.py  repo_info.py  settings.py
src/hsbriskevaluator/collector/github_collector/: __init__.py  converters.py  data_collectors.py  token_manager.py  utils.py
src/hsbriskevaluator/dep_collector/: base.py  deps_dev_collector.py
src/hsbriskevaluator/evaluator/: CI_evaluator.py  __init__.py  base.py  cloud_products.yaml  community_evaluator.py  dependency_evaluator.py  llm_evaluator.py  main_evaluator.py  mainstream_os.yaml  os_default.yaml  payload_evaluator.py  settings.py
src/hsbriskevaluator/ripgrep/: __init__.py  installer.py  ripgrep.py
src/hsbriskevaluator/score_calculator/: __init__.py  calculator.py
src/hsbriskevaluator/utils/: apt_utils.py  diff.py  display.py  file.py  llm.py  llm_cache.py  progress.py  progress_manager.py  prompt.py  upstream.py
tests/: test_diff_package.py  test_evaluator.py  test_repo_collector.py  test_repo_compare.py
